--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
         rel="stylesheet">
      <link rel="stylesheet" 
      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/portfolio.min.css">
 </head>
 
 <body class="page">
@@ -49,7 +49,7 @@
          <!--main-->
     <main>
         <section class="section">
-         <div class="wraper wraper-portfolio">
+         <div class="wraper">
              <h1 hidden>Нашы роботы</h1>
              <ul class="button-menu list">
                  <li class="button-link">
@@ -197,6 +197,19 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+            <div class="agreement-footer">
+                <b class="agreement-footer-name">Подпишитесь на рассылку</b>
+                <form class="agreement-box">
+                    <input type="email" name="email" placeholder="E-mail" class="email-footer-input">
+                    <div class="btn-box">
+                        <button type="submit" class="btn-footer">Подписаться
+                            <svg class="footer-icon-send">
+                                <use href="./img/sprite.svg#icon-send"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
     </footer>
